--- a/markup/components/goods/goods.html
+++ b/markup/components/goods/goods.html
@@ -1,10 +1,9 @@
-<div class="goods__item m-block">
+<div class="goods__item m-block" data-url="product.html">
     <a href="#" class="goods__img-cont m-img-cont">
         <img src="http://via.placeholder.com/300x300" alt="">
     </a>
 
     <div class="goods__title-cont">
-
         <a href="#" class="goods__title">
             Описание товара
         </a>
