--- a/markup/components/first/first.sass
+++ b/markup/components/first/first.sass
@@ -31,20 +31,43 @@
         img 
             max-width: 100%
             height: auto
+
+.overlay 
+    position: fixed
+    top: 0
+    left: 0
+    right: 0
+    bottom: 0
+    z-index: 1999
+    opacity: 0
+    visibility: hidden
+    &:visible 
+        visibility: visible
+        opacity: 1
+        background-color: #fff
 .reg-block
-    border-radius: 50px
+    border-radius: 25px
     background-color: rgba(138, 95, 230, 0.702)
     display: flex
     flex-direction: column
-    padding: 40px 90px
-    margin-top: 90px
+    padding: 40px 25px
     animation-dela: 0.3s
     box-shadow: 0px 12px 17.85px 3.15px rgba(0, 0, 0, 0.1)
-    max-width: 705px
+    max-width: 545px
     align-items: center 
     position: relative
-    margin-bottom: 60px
     z-index: 10
+    position: fixed
+    transition: 0.3s
+    opacity: 0
+    visibility: hidden;
+    top: 50%    
+    left: 50%
+    transform: translate(-50%, -50%)
+    z-index: 2000
+    &.visible 
+        visibility: visible
+        opacity: 1
     @media screen and(max-width: 768px)
         padding: 15px
         border-radius: 9px
@@ -59,7 +82,26 @@
         text-shadow: 0px 12px 17.85px rgba(0, 0, 0, 0.1)
         @media screen and(max-width: 768px)
             font-size: 22px
-            margin-top: 10px            
+            margin-top: 10px          
+    &-cont 
+        display: flex
+        justify-content: flex-end  
+        width: 100%;
+        margin-top: 25px
+    &__button
+        font-size: 12px;
+        font-family: "Segoe UI";
+        color: rgb(255, 255, 255);
+        line-height: 2;
+        width: 125px
+        height: 40px
+        background-color: #ab84c1
+        color: white
+        border-radius: 50px
+        display: flex
+        justify-content: center
+        align-items: center
+        font-size: 20px
 
 .parralax
     position: absolute
