--- a/markup/static/scss/common.sass
+++ b/markup/static/scss/common.sass
@@ -63,114 +63,51 @@ a
 
 .bgcw
     background: #fff
-.drop-menu
-    display: flex
-    padding: 35px 20px 55px 20px
-    background-color: #fff
-    width: 100%
-    visibility: hidden
-    opacity: 0
-    max-height: 100vh
-    transition: 0.3s    
-    box-shadow: 0 17px 17px 1px #4b4b4b34
 
-    overflow-x: hidden
-    overflow-y: auto
-    .wrapper
-        max-height: 100%
-    &__container 
-        display: flex
-        @media screen and(max-width: 767px)
-            flex-direction: column !important
-    &.visible
-        opacity: 1
-        visibility: visible
-    ul
-        list-style: none
-        padding: 0
-        margin: 0
-    &__img
-        width: 420px
-        height: 240px
-        border-radius: 20px
-        @media screen and(max-width: 1023px)
-            width: 200px
-            height: 100px
-    &__tab-int 
-        display: flex
-        @media screen and(max-width: 425px)
-            flex-direction: column
-    &__links1
-        min-width: 230px
-        margin-right: 10px
+.callDrop 
+    &:hover 
+        .drop 
+            opacity: 1
+            visibility: visible
+
+.header__menu-link 
+    position: static
+.menu-open 
+    display: none !important
+    @media screen and (max-width: 1024px)
+        display: flex !important
+.header__menu-logo 
+    @media screen and (max-width: 425px)
+        display: none
+.drop
+    display: flex
+    flex-wrap: wrap 
+    position: absolute  
+    top: 94%   
+    width: 100%
+    background-color: white
+    padding: 40px
+    font-weight: 400
+    opacity: 0
+    visibility: hidden
+    transition: 0.3s;
+    max-height: 100vh
+    overflow: auto
+    left: 0;
+    @media screen and (max-width: 768px)
+        width: 100vw
+    &__column
         display: flex
         flex-direction: column
-        @media screen and(max-width: 767px)
-            flex-direction: row
-            flex-wrap: wrap
-            margin-bottom: 50px !important
-        li 
-            margin-right: 20px 
-            height: 40px               
-        a 
-            display: flex
-            font-size: 18px
-            font-family: "Segoe UI"
-            color: #747474
-            padding-top: 5px
-            padding-bottom: 5px
-            outline: none
-            display: flex
-            align-items: center
-            @media screen and(max-width: 767px)
-                width: 100%
-                
-
-            svg
-                margin-left: 7px
-                opacity: 0
-                transform: translateX(10px)
-                transition: 0.1s
-        .ui-state-active
-            a   
-                color: #000
-                svg
-                    opacity: 1
-                    transform: translateX(0px)
+        margin-right: 60px
+    &__items
+        margin-top: 10px
+        display: flex
+        flex-direction: column
+    &__item 
+        text-transform: none
+        margin-bottom: 5px
     
-    &__links2
-        min-width: 175px
-        margin-right: 10px
-        @media screen and(max-width: 425px)
-            display: flex
-            flex-wrap: wrap
-            margin-bottom: 30px
-        li 
-            @media screen and(max-width: 425px)
-                margin-right: 20px
-                
-        a
-            display: flex
-            align-items: center
-            transition: 0.3s
-            font-size: 18px
-            font-family: "Segoe UI"
-            color: rgb(0, 0, 0)
-            padding-top: 5px
-            outline: none
-            padding-bottom: 5px
-
-            svg
-                margin-left: 7px
-                opacity: 0
-                transform: translateX(10px)
-                transition: 0.1s
-        .ui-state-active
-            a   
-                color: #999
-                svg
-                    opacity: 1
-                    transform: translateX(0px)
 
 .slider
     height: 610px
@@ -281,6 +218,8 @@ a
     width: 4px
     background-color: #e9eaec
 
+
+    
 .m-content
     margin-top: 40px
     margin-bottom: 100px
@@ -1040,7 +979,27 @@ a
     flex-direction: column
     width: 22.3%
     padding-bottom: 10px
-    
+    label 
+        div 
+            height: 35px    
+            border: 2px solid #cdcdcd
+            box-shadow: none
+            min-width: 35px
+            max-width: 35px
+            border-radius: 4px
+        input
+            &:checked
+                ~ div 
+                    border-color: $or
+                    background-color: $or
+                    & svg 
+                        opacity: 1
+    svg     
+        fill: white
+        opacity: 0
+        transition: 0.3s;
+        width: 26px
+        height: 20px
     @media screen and(max-width: 1023px)
         position: fixed
         top: 0px
@@ -1098,14 +1057,6 @@ a
     &__price
         .filter__title-2
             margin-bottom: 30px
-    .form__checkbox
-        div
-            transform: scale(0.5)
-        p 
-            font-size: 16px
-            display: inline
-            a 
-                display: inline
     &__title-2
         font-size: 18px 
         font-weight: bold
