--- a/markup/components/goods/goods.html
+++ b/markup/components/goods/goods.html
@@ -1,4 +1,4 @@
-<div class="goods__item m-block" data-url="product.html">
+<div class="goods__item m-block goods__item-noreg" data-url="product.html">
     <a href="#" class="goods__img-cont m-img-cont">
         <img src="http://via.placeholder.com/300x300" alt="">
     </a>
