--- a/markup/components/footer/footer.html
+++ b/markup/components/footer/footer.html
@@ -126,14 +126,14 @@
 
 <div class="overlay"></div>
 
-<div class="modal modal-">
+<div class="modal modal-tr" data-id="">
     <div class="modal__title">Вы уверены, что хотите удалить 
         данный товар из корзины?</div>
     <div class="modal__buttons">
         <div class="modal-left">
-            <a href="#" class="m-button-purp">Да, удалить</a>
+            <a href="#" class="m-button-purp modal-ok">Да, удалить</a>
         </div>
-        <div class="modal-right">
+        <div class="modal-right modal-ne-ok">
             <a href="#" class="m-button">
                 Оставить
             </a>
