--- a/markup/components/header/header.html
+++ b/markup/components/header/header.html
@@ -154,7 +154,7 @@
                             
                         </div>
                     </div >
-                    <div data-href="product.html" class=" header__menu-link callDrop callDrop-1">предзаказ
+                    <div data-href="product.html" class=" header__menu-link callDrop callDrop-1">
     
                         <div class="call-link" data-href="product.html">
                                 предзаказ
