--- a/dev/static/css/main.css
+++ b/dev/static/css/main.css
@@ -8266,9 +8266,9 @@ a {
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
-  -webkit-box-align: end;
-      -ms-flex-align: end;
-          align-items: flex-end;
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: flex-start;
   max-width: 220px;
 }
 
@@ -8967,8 +8967,6 @@ ul li {
 }
 
 .tabs__table {
-  -webkit-box-shadow: 0px 12px 17.85px 3.15px rgba(0, 0, 0, 0.13);
-          box-shadow: 0px 12px 17.85px 3.15px rgba(0, 0, 0, 0.13);
   width: 100%;
   overflow: hidden;
   border-radius: 23px;
@@ -9070,6 +9068,10 @@ ul li {
 
 .tabs__table td.hard-red {
   background-color: #ff7575;
+}
+
+.tabs__table td .m-button {
+  min-width: 160px;
 }
 
 .tabs__table td .m-img-cont {
@@ -9861,6 +9863,176 @@ input[type=number] {
       -ms-flex-align: center;
           align-items: center;
   padding-left: 25px;
+}
+
+.error-f {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  margin-bottom: 20px;
+  color: #f19eca;
+  text-align: center;
+  font-size: 160px;
+  line-height: 100px;
+  margin: 40px 0;
+  font-weight: bold;
+}
+
+.error-f-cont {
+  height: 100vh;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+.error-f-cont .m-desc {
+  text-align: center;
+  color: #e49e25;
+  font-weight: 500;
+  margin-top: 10px;
+}
+
+.error-f-cont .m-button {
+  margin-top: 30px;
+}
+
+.error-f-desc {
+  margin-bottom: 1px;
+  font-size: 26px;
+  color: #943fdc;
+  font-weight: bold;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  text-align: center;
+}
+
+.humburger {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  width: 100%;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  position: relative;
+}
+
+.humburger svg {
+  width: 40px;
+  height: 40px;
+}
+
+.header-mobile-container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  margin-right: 10px;
+}
+
+.humburger-open {
+  display: none;
+}
+
+@media screen and (max-width: 768px) {
+  .humburger-open {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+  }
+  .search-field {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    width: 100vw;
+    height: 100%;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    top: 100%;
+    left: 0;
+    height: 1000px;
+    background-color: #fff;
+    position: fixed;
+  }
+  .search-field input {
+    position: absolute;
+  }
+  .header-mobile-container-1 {
+    margin-left: 15px;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    max-width: 100%;
+    width: 100%;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+    background-color: #fff;
+  }
+  .header-mobile-container {
+    margin-right: 0;
+  }
+  .header__right {
+    display: none !important;
+  }
+  .menu-open {
+    display: none !important;
+  }
+  .header__menu-all {
+    position: absolute;
+    top: 100%;
+    left: 0;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    z-index: 0;
+    background-color: #fff;
+    width: 250px;
+    padding: 10px;
+    opacity: 0;
+    visibility: hidden;
+  }
+  .header__menu-all.visible {
+    opacity: 1;
+    visibility: visible;
+  }
+  .header__menu-all .header__menu-link {
+    margin-bottom: 10px;
+  }
+  .header__menu-all .drop {
+    z-index: 1;
+  }
+  .sign-container {
+    margin-bottom: 10px;
+  }
 }
 
 .first {
@@ -11300,3 +11472,5 @@ input[type=number] {
   color: #676767;
   line-height: 2.5;
 }
+
+/*# sourceMappingURL=main.css.map */
