--- a/markup/components/footer/footer.html
+++ b/markup/components/footer/footer.html
@@ -142,7 +142,7 @@
 </div>
 
 <div class="modal modal-feedback">
-    <div class="modal__title">Спасибо за оставленный отзыв!</div>
+    <div class="modal__title">Спасибо за отпраленное сообщение, нам очень важно Ваше мнение!</div>
 </div>
 
 
