--- a/markup/components/orders/orders-5.html
+++ b/markup/components/orders/orders-5.html
@@ -118,4 +118,21 @@
             </tr>
 
         </table>
+
+        <div class="predoplata">
+            <div class="predoplata__items">
+                <div class="predoplata__item">
+                    <div class="predoplata__title">
+                        Скидка 
+                    </div>
+                    <div class="predoplata__cur">145 руб.</div>
+                </div>
+                <div class="predoplata__item">
+                    <div class="predoplata__title">
+                        Резерв 
+                    </div>
+                    <div class="predoplata__cur">145 руб.</div>
+                </div>
+            </div>
+        </div>
     </div>
