--- a/markup/components/footer/footer.html
+++ b/markup/components/footer/footer.html
@@ -141,6 +141,17 @@
     </div>
 </div>
 
+<div class="popup popup-basket">
+    <div class="popup-basket__title">Товар добавлен в корзину!</div>
+    <div class="popup-basket__img">
+        <img src="%=static=%img/content/popup-nasket-img.png" alt="">
+    </div>
+    <div class="popup-basket__buttons">
+        <a href="#" class="popup-basket__button m-button purple">Продолжить покупки</a>
+        <a href="#" class="popup-basket__button m-button">Перейти в корзину</a>
+    </div>
+</div>
+
 <div class="modal modal-feedback">
     <div class="modal__title">Спасибо за отпраленное сообщение, нам очень важно Ваше мнение!</div>
 </div>
