--- a/markup/components/header/header.html
+++ b/markup/components/header/header.html
@@ -16,12 +16,29 @@
 
                 
                 <div class="header-mobile-container">
-                    <form action="#" class="search">
-                        <input name="search" class="search__field m-field" placeholder="поиск">
-                        <!-- <button href="#" class="search__button"> -->
+                    <div class="search-desctop-container">
+                        <!-- <form action="#" class="search search-mobile">
+                            <input name="search" class="search__field m-field" placeholder="поиск">
+                            <button class="search__button">
+                                <img src="../static/img/content/search.png" class="button-open" alt="">
+                            </button>
+                        </form> -->
+                        <form action="#" class="search seacrh-mobile">
+                            <input name="search" class="search__field m-field" placeholder="поиск">
+                            <button class="search__button">
+                                <img src="../static/img/content/search.png" class="button-open" alt="">
+                            </button>
+                        </form> 
+                    </div>
+
+                    <div class="search_mobile">
+                        <div class="search_mobile__open seacrh-open">
                             <img src="../static/img/content/search.png" class="button-open" alt="">
-                        <!-- </button> -->
-                    </form>
+                        </div>
+                        <div class="search_mobile__container">
+
+                        </div>
+                    </div>
                     
                     <div class="header__basket">
                         <a href="#">
@@ -43,7 +60,6 @@
                         </div>
                     </div>
                 </div>
-
 
                 
             </div>
