--- a/markup/components/pagination/pagination.html
+++ b/markup/components/pagination/pagination.html
@@ -3,7 +3,7 @@
         <a href="#" class="pagination__prev pagination__button">
             <img src="%=static=%img/content/left.png" alt="">
         </a>
-        <a href="#" class="pagintaion__item pagination__button">
+        <a href="#" class="pagintaion__item pagination__button active">
             <span>1</span>
         </a>
         <a href="#" class="pagintaion__item pagination__button">
