--- a/markup/static/scss/GUI.sass
+++ b/markup/static/scss/GUI.sass
@@ -20,6 +20,12 @@
         background-color: $ordark
     &:active
         background-color: $ordarker
+    &:disabled 
+        background-color: #d58966
+        &:hover
+            background-color: #d58966
+        &:active
+            background-color: #d58966
 
 .m-button
     background: $or
