--- a/dev/static/css/main.css
+++ b/dev/static/css/main.css
@@ -5933,6 +5933,18 @@ button.swiper-pagination-bullet {
   background-color: #dd7b08;
 }
 
+.m-button:disabled {
+  background-color: #d58966;
+}
+
+.m-button:disabled:hover {
+  background-color: #d58966;
+}
+
+.m-button:disabled:active {
+  background-color: #d58966;
+}
+
 .m-button {
   background: #ff8f0b;
   padding: 7px 40px;
@@ -6442,12 +6454,6 @@ a {
   }
 }
 
-@media screen and (max-width: 425px) {
-  .header__menu-logo {
-    display: none;
-  }
-}
-
 .header__menu-all {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -6490,6 +6496,10 @@ a {
   .drop {
     width: 100vw;
   }
+}
+
+.drop__title:hover {
+  text-decoration: underline;
 }
 
 .drop__column {
@@ -7066,9 +7076,10 @@ a {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -ms-flex-wrap: wrap;
-      flex-wrap: wrap;
-  max-width: 460px;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
   width: 100%;
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
@@ -7102,7 +7113,7 @@ a {
 .form__right, .form-reg__right {
   padding: 0 70px;
   padding-bottom: 55px;
-  width: 40%;
+  width: 50%;
 }
 
 .form__right .form__title, .form-reg__right .form__title {
@@ -8368,8 +8379,8 @@ a {
   -webkit-box-shadow: 0px 12px 17.85px 3.15px rgba(0, 0, 0, 0.1);
           box-shadow: 0px 12px 17.85px 3.15px rgba(0, 0, 0, 0.1);
   overflow: hidden;
-  width: 31.5%;
-  margin-right: auto;
+  width: calc(33% - 30px);
+  margin-right: 30px;
   margin-bottom: 23px;
 }
 
@@ -9254,6 +9265,7 @@ ul li {
   max-width: 105px;
   height: 105px;
   border-radius: 50%;
+  background-color: #ccc;
 }
 
 .settings__link {
@@ -9323,8 +9335,66 @@ ul li {
           justify-content: center;
 }
 
+.recovery {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  width: 100%;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.recovery__title {
+  width: 100%;
+  text-align: center;
+  font-size: 24px;
+}
+
+.recovery__item {
+  max-width: 460px;
+  width: 100%;
+  margin-top: 30px;
+}
+
+.recovery__item .m-field {
+  width: 100%;
+  max-width: 100%;
+}
+
+.recovery .m-button {
+  margin-top: 100px;
+}
+
+.thanx-title-title {
+  color: #ff8f0b;
+  font-size: 34px;
+  width: 100%;
+  text-align: center;
+}
+
+.thanx-desc {
+  color: #000;
+  font-size: 24px;
+  width: 100%;
+  text-align: center;
+  margin-top: 30px;
+}
+
 .payment-tabs {
   width: 100%;
+}
+
+.settings-label span {
+  cursor: pointer;
+}
+
+.settings-label span:hover {
+  text-decoration: underline;
 }
 
 hr {
@@ -9384,6 +9454,69 @@ hr {
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
+}
+
+.popup-basket {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  text-align: center;
+  position: fixed;
+  border-radius: 26px;
+  top: 50%;
+  left: 50%;
+  z-index: 10000;
+  background-color: rgba(138, 95, 230, 0.7);
+  padding: 45px 40px 40px;
+  -webkit-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
+  min-width: 300px;
+  max-width: 542px;
+  width: 100%;
+  visibility: hidden;
+  opacity: 0;
+}
+
+.popup-basket.visible {
+  opacity: 1;
+  visibility: visible;
+}
+
+.popup-basket__title {
+  font-size: 29px;
+  color: white;
+}
+
+.popup-basket__img {
+  margin: 30px 0;
+}
+
+.popup-basket__buttons {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  width: 100%;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.popup-basket__button {
+  padding: 10px;
+}
+
+.popup-basket__button.purple {
+  background-color: #ab84c1;
 }
 
 .payment-tab {
@@ -9772,6 +9905,7 @@ input[type=number] {
 
 .pagination__button.active {
   border-color: #ff8f0b;
+  color: #ff8f0b;
 }
 
 .pagination__container {
@@ -9961,13 +10095,28 @@ input[type=number] {
   display: none;
 }
 
+.search_mobile {
+  display: none;
+}
+
 @media screen and (max-width: 768px) {
+  .search.search-desctop {
+    display: none !important;
+  }
+  .search_mobile {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+  }
   .humburger-open {
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
   }
-  .search-field {
+  .search-desctop-container {
+    display: none;
+  }
+  .seacrh-mobile {
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
@@ -9978,12 +10127,22 @@ input[type=number] {
             justify-content: center;
     top: 100%;
     left: 0;
+    margin-top: 0 !important;
+    padding-top: 10px;
     height: 1000px;
     background-color: #fff;
     position: fixed;
+    -webkit-box-align: start !important;
+        -ms-flex-align: start !important;
+            align-items: flex-start !important;
+    visibility: hidden;
+    opacity: 0;
+    -webkit-transition: 0.3;
+    transition: 0.3;
   }
-  .search-field input {
-    position: absolute;
+  .seacrh-mobile.visible {
+    visibility: visible;
+    opacity: 1;
   }
   .header-mobile-container-1 {
     margin-left: 15px;
@@ -10033,6 +10192,55 @@ input[type=number] {
   .sign-container {
     margin-bottom: 10px;
   }
+}
+
+.hidden-content {
+  display: none;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+
+.hidden-content.visible {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.legal-content {
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  width: 100%;
+}
+
+.form-sign {
+  width: 50%;
+  padding-left: 60px;
+  border-right: 4px solid #e9eaec;
+  padding-right: 90px;
+}
+
+.link-lost {
+  width: 100%;
+  font-size: 13px;
+  font-weight: 500;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: end;
+      -ms-flex-pack: end;
+          justify-content: flex-end;
+  text-decoration: underline;
+  margin-top: 10px;
+}
+
+.link-lost:hover {
+  text-decoration: none;
 }
 
 .first {
@@ -10905,7 +11113,6 @@ input[type=number] {
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
-  padding: 20px 0;
   width: 100%;
   left: 50%;
   -webkit-transform: translate(-50%);
