--- a/markup/static/scss/common.sass
+++ b/markup/static/scss/common.sass
@@ -79,9 +79,6 @@ a
     display: none !important
     @media screen and (max-width: 1024px)
         display: flex !important
-.header__menu-logo 
-    @media screen and (max-width: 425px)
-        display: none
 .header__menu-all 
     display: flex
     width: 100%
@@ -107,6 +104,9 @@ a
     left: 0;
     @media screen and (max-width: 768px)
         width: 100vw
+    &__title 
+        &:hover 
+            text-decoration: underline
     &__column
         display: flex
         flex-direction: column
@@ -429,8 +429,7 @@ a
         align-items: center
         &-cont 
             display: flex
-            flex-wrap: wrap
-            max-width: 460px
+            flex-direction: column
             width: 100%
             justify-content: space-between
 
@@ -450,7 +449,7 @@ a
     &__right
         padding: 0 70px
         padding-bottom: 55px
-        width: 40%
+        width: 50%
         .form__title
             text-align: left
         @media screen and(max-width: 768px)
@@ -1145,8 +1144,8 @@ a
         border-radius: 29px
         box-shadow: 0px 12px 17.85px 3.15px rgba(0, 0, 0, 0.1)
         overflow: hidden
-        width: 31.5%
-        margin-right: auto
+        width: calc(33% - 30px)
+        margin-right: 30px
         margin-bottom: 23px
         &:nth-child(3n+3)
             margin-right: 0
@@ -1650,6 +1649,7 @@ ul
         max-width: 105px 
         height: 105px
         border-radius: 50%
+        background-color: #ccc
     &__link 
         font-size: 16px
         font-family: "Segoe UI"
@@ -1682,8 +1682,42 @@ ul
         width: 100%
         justify-content: center
 
+.recovery 
+    display: flex
+    flex-direction: column
+    width: 100%
+    align-items: center
+    &__title 
+        width: 100%
+        text-align: center
+        font-size: 24px
+    &__item 
+        max-width: 460px
+        width: 100%
+        margin-top: 30px
+        .m-field 
+            width: 100%
+            max-width: 100%
+    .m-button 
+        margin-top: 100px
+.thanx-title-title 
+    color: $or
+    font-size: 34px
+    width: 100%
+    text-align: center
+.thanx-desc 
+    color: #000
+    font-size: 24px
+    width: 100%
+    text-align: center
+    margin-top: 30px
 .payment-tabs 
     width: 100%
+.settings-label 
+    span 
+        cursor: pointer
+        &:hover 
+            text-decoration: underline
 hr 
     width: 100%
     height: 2px 
@@ -1722,7 +1756,44 @@ hr
             justify-content: space-between
 
             
-            
+.popup-basket 
+    display: flex
+    flex-direction: column
+    align-items: center
+    text-align: center
+    position: fixed
+    border-radius: 26px
+    top: 50%
+    left: 50%
+    z-index: 10000
+    background-color: rgba(138, 95, 230, 0.7)
+    padding: 45px 40px 40px
+    transform: translate(-50%, -50%);
+    min-width: 300px
+    max-width: 542px
+    width: 100%
+    visibility: hidden
+    opacity: 0
+    &.visible 
+        opacity: 1
+        visibility: visible
+    &__title 
+        font-size: 29px
+        color: white
+    &__img 
+        margin: 30px 0
+    &__buttons 
+        display: flex
+        justify-content: space-between
+        width: 100%
+        align-items: center
+    &__button
+        padding: 10px;
+        &.purple 
+            background-color: #ab84c1
+
+
+
 .payment-tab 
     width: 100% 
     list-style: none
@@ -1977,6 +2048,7 @@ input[type=number]
                 color: #676767
         &.active
             border-color: $or
+            color: $or
     &__container    
         display: flex
         justify-content: center
@@ -2083,21 +2155,38 @@ input[type=number]
     margin-right: 10px
 .humburger-open 
     display: none
+
+.search_mobile 
+    display: none
+
 @media screen and (max-width: 768px) 
+    .search.search-desctop
+        display: none !important
+    .search_mobile 
+        display: flex
     .humburger-open
         display: flex
-    .search-field 
+    .search-desctop-container 
+        display: none
+    .seacrh-mobile
         display: flex
         width: 100vw;
         height: 100%;
         justify-content: center
         top: 100%;
         left: 0
+        margin-top: 0 !important
+        padding-top: 10px
         height: 1000px
         background-color: #fff
         position: fixed
-        input 
-            position: absolute
+        align-items: flex-start !important  
+        visibility: hidden
+        opacity: 0  
+        transition: 0.3
+        &.visible 
+            visibility: visible
+            opacity: 1
     .header-mobile-container-1 
         margin-left: 15px
         display: flex
@@ -2134,3 +2223,36 @@ input[type=number]
     .sign-container
         margin-bottom: 10px
     
+.hidden-content 
+    display: none
+    flex-direction: column
+    &.visible
+        display: flex
+
+.legal-content
+    flex-direction: column
+    flex-wrap: wrap;
+    width: 100%
+    .form__block
+    
+
+
+.form-sign 
+    width: 50%
+    padding-left: 60px
+    border-right: 4px solid #e9eaec
+    padding-right: 90px;
+
+.link-lost
+    width: 100%
+    font-size: 13px
+    font-weight: 500
+    display: flex
+    justify-content: flex-end   
+    text-decoration: underline
+    margin-top: 10px
+    &:hover 
+        text-decoration: none
+
+
+
