изменения в хедере, на стр.  ред. пользователя и  регистрации

--- a/markup/components/header/header.sass
+++ b/markup/components/header/header.sass
@@ -189,6 +189,13 @@
     margin-right: 30px
     &__icon
         margin-right: 10px
+    &.active 
+        .sign__icon
+            display: none
+        .sign__icon-active 
+            display: flex
+    &__icon-active
+        display: none
     &__right
         display: flex
         flex-direction: column
