--- a/markup/static/scss/common.sass
+++ b/markup/static/scss/common.sass
@@ -2053,10 +2053,13 @@ input[type=number]
         justify-content: center
     
 
-
 .tkKit 
     display: none
-    &.vis
+    flex-wrap: wrap
+    justify-content: space-between
+    .form__block 
+        width: 48%;
+    &.visible
         display: flex
 
 .doc 
