--- a/markup/components/header/header.html
+++ b/markup/components/header/header.html
@@ -13,8 +13,6 @@
             </div>
             <div class="header__right">
                 
-
-                
                 <div class="header-mobile-container">
                     <div class="search-desctop-container">
                         <!-- <form action="#" class="search search-mobile">
@@ -49,10 +47,15 @@
                 </div>
                 
                 <div class="sign-container-1">
-                    <div class="sign">
+                    <div class="sign active">
                         <div class="sign__icon">
                             <img src="../static/img/content/sign.png" alt="">
                         </div>
+
+                        <div class="sign__icon sign__icon-active">
+                            <img src="../static/img/content/sign-active.png" alt="">
+                        </div>
+                        
     
                         <div class="sign__right">
                             <a href="#" class="sign__sign">Войти</a>
